refactor: adopt Java 21 sequenced-collection + emptiness idioms
- list.get(0) -> list.getFirst() (22 sites); args.get(args.size()-1) ->
  args.getLast() (2) — all on List/SequencedCollection receivers.
- StringBuilder length() > 0 -> !isEmpty() (Java 15+); collection size() > 0
  -> !isEmpty().

All receivers compile-checked as List/SequencedCollection/StringBuilder;
556 tests green.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>